fix input note to topic

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -31,12 +31,13 @@ body {
 .months {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 98%;
+  margin: 0 auto;
   overflow-x: auto;
 }
 
 .month {
-  z-index: -1;
+  //z-index: -1;
   width: 40%;
   max-width: 430px;
 
